@@ -1,0 +1,389 @@
+<!DOCTYPE html>
+<!-- saved from url=(0064)http://dev.mysql.com/doc/connector-net/en/license-antlr-3-3.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link rel="stylesheet" type="text/css" href="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/widget094.css" media="all">
+    <meta charset="utf-8">
+    <!--[if IE ]>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
+    <![endif]-->
+    <title>MySQL ::   MySQL Connector/Net :: B.1 ANTLR 3.3 License</title>
+
+    
+    <link rel="stylesheet" media="screen" href="http://dev.mysql.com/common/css/mysql.css?v=20111208">
+    <link rel="stylesheet" media="projection" href="http://dev.mysql.com/common/css/mysql.css?v=20111208">
+    <link rel="stylesheet" media="print" href="http://dev.mysql.com/common/css/print.css?v=20111208">
+
+            <link rel="stylesheet" href="http://dev.mysql.com/doc/docs.css">
+        
+    
+    
+    
+    <link rel="contents" href="http://dev.mysql.com/doc/connector-net/en/index.html" title="MySQL Manual"><link rel="start" href="http://dev.mysql.com/doc/connector-net/en/index.html" title="MySQL Manual"><link rel="prev" href="http://dev.mysql.com/doc/connector-net/en/connector-net-third-party-licenses.html" title="B Licenses for Third-Party Components"><link rel="next" href="http://dev.mysql.com/doc/connector-net/en/license-us-secure-hash.html?ff=nopfpls" title="B.2 RFC 3174 - US Secure Hash Algorithm 1 (SHA1) License"><link rel="up" href="http://dev.mysql.com/doc/connector-net/en/connector-net-third-party-licenses.html" title="B Licenses for Third-Party Components">        <link rel="shortcut icon" href="http://dev.mysql.com/common/themes/sakila/favicon.ico">
+
+        <script src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/clear_search_text.js"></script>
+
+    
+        
+    <script type="text/javascript">var addthis_config = {"data_track_addressbar":false};</script>
+    <!-- The following src attribute is not a typo, it is a protocol-relative URI -->
+    <script type="text/javascript" src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/addthis_widget.js"></script><div style="visibility: hidden; height: 1px; width: 1px; position: absolute; z-index: 100000; " id="_atssh"><iframe id="_atssh285" title="AddThis utility frame" style="height: 1px; width: 1px; position: absolute; z-index: 100000; border: 0px; left: 0px; top: 0px; " src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/sh100.htm"></iframe></div><script type="text/javascript" src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/core034.js"></script>
+
+    
+</head>
+
+<body class="doc">
+
+<div id="container">
+
+<!--UdmComment-->
+<a class="skipToContent" href="http://dev.mysql.com/doc/connector-net/en/license-antlr-3-3.html#mainContent">Skip navigation links</a>
+
+    <div id="header">
+
+    <div class="left">
+
+    <div id="logo">
+                                            <a href="http://dev.mysql.com/" title="MySQL">
+                            <img src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/logo-mysql-110x57.png" alt="MySQL" width="110" height="57"></a>
+            </div>
+            <div id="tagline">The world's most popular open source database</div>
+
+    </div>
+
+    <div class="right">
+        
+        <div id="search_box"> <!-- Start Search -->
+        		<form id="searchform" name="searchform" method="get" action="http://search.oracle.com/search/search">
+			<input type="text" id="q" name="q" value="Search" class="swap_value" onfocus="clearSearchText();">
+			<input type="hidden" id="search_dest" name="group" value="Documentation">
+			<input type="image" src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/search_g.png" id="go" alt="Search" title="Search">
+		    </form>        </div> <!-- End Search -->
+
+        
+          
+        <div id="login">
+
+                             <p><a href="https://dev.mysql.com/login/?dest=http%3a%2f%2fdev.mysql.com%2Fdoc%2Fconnector-net%2Fen%2Flicense-antlr-3-3.html">Login</a> | <a href="https://dev.mysql.com/register/">Register</a></p>
+            
+        </div>
+
+            </div>
+
+    </div> 
+
+    <!-- MySQL Navigation -->
+    <div id="nav_container">
+
+    <div id="flags">
+        <ul>
+            <li style="position:relative; top:-5px;">
+                <!-- Icons from http://icondock.com/free/vector-social-media-icons //-->
+                <a href="http://www.facebook.com/mysql"><img src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/facebook.png" alt="Facebook" title="Join us on Facebook" width="20" height="20"></a>&nbsp;
+                <a href="https://twitter.com/#!/mysql"><img src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/twitter.png" alt="Twitter" title="Follow us on Twitter" width="20" height="20"></a>&nbsp;
+                <a href="http://www.youtube.com/mysqlchannel"><img src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/youtube.png" alt="YouTube" title="Visit our YouTube channel" width="20" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li>
+                            <br>
+                        </ul>
+    </div>
+    
+                        <div id="tab_last">
+        <ul>
+            <li class="first"><a href="http://dev.mysql.com/">Developer Zone</a></li>
+            <li class="second"><a href="http://dev.mysql.com/downloads/">Downloads</a></li>
+            <li class="current"><a href="http://dev.mysql.com/doc/">Documentation</a></li>
+        </ul>
+        </div>
+            
+
+
+    <div id="mysql_menu">
+        <ul>
+	<li class="current"><a class="current " href="http://dev.mysql.com/doc/">MySQL Server</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-enterprise.html">MySQL Enterprise</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-gui.html">MySQL Workbench</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-cluster.html">MySQL Cluster</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-connectors.html">MySQL Connectors</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-topic.html">Topic Guides</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-expert.html">Expert Guides</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-other.html">Other Docs</a>
+	
+		
+		
+	</li>
+	
+	<li class="link"><a href="http://dev.mysql.com/doc/index-archive.html">Archives</a>
+	
+		
+		
+	</li>
+	
+	<li class="link last"><a href="http://dev.mysql.com/doc/index-about.html">About</a>
+	
+		
+		
+	</li>
+	
+</ul>
+    </div>
+
+        <div id="og_sakila">&nbsp;</div>
+            <div id="og_title">&nbsp;</div>
+
+    </div>
+    <!-- End Navigation Container -->
+
+<!--/UdmComment-->
+
+<div class="page_container">
+    <div class="page_sidebar">
+	<!--UdmCommentTest-->
+
+	<div id="menu_title"></div>
+
+	<div id="menu">
+		<ul>
+			<li class="current"><a class="current subitems" href="http://dev.mysql.com/doc/index.html">Documentation Library</a>
+
+			<ul class="subitems1">
+				 <li><a href="http://dev.mysql.com/doc/connector-net/en/index.html"><b>Table of Contents</b></a>
+
+
+				 <ul class="subitems2">
+				 
+				 </ul>
+
+
+
+				 </li>
+
+
+			</ul>
+
+
+			</li>
+		</ul>
+
+	 <div class="searchmanual">
+			<form action="http://search.oracle.com/search/search" method="get" id="docsearch">
+		<strong><label for="searchq">Search manual:</label></strong>
+		<br>
+		<input id="searchq" type="text" name="q" value="" size="14">
+		<input id="searchsubmit" type="submit" value="Go">
+		<input id="searchgroup" type="hidden" name="group" value="MySQL">
+	</form>	 </div>
+
+
+	</div>
+
+	
+</div>  
+<!-- Main content -->
+
+<div id="page" class="sidebar">
+
+    
+
+
+
+
+	<!--UdmComment-->
+
+<div id="docheader"><a href="http://dev.mysql.com/doc/connector-net/en/index.html"> MySQL Connector/Net</a> :: <a href="http://dev.mysql.com/doc/connector-net/en/connector-net-third-party-licenses.html">B Licenses for Third-Party Components</a> :: B.1 ANTLR 3.3 License</div>
+
+	 
+	
+
+	
+<script language="javascript">
+
+<!--
+function toggle(what){
+ if(document.getElementById(what).style.display == "none"){
+   document.getElementById(what).style.display = "block";
+ }else{
+   document.getElementById(what).style.display = "none";
+ }
+}
+//-->
+
+</script>
+<noscript></noscript>
+
+<div style="float: right; width: 250px; margin: 0px 0px 8px 8px; background: white">
+	<div style="text-align: right; font-size: 90%; margin-bottom: 4px">
+		<div style="text-align: left;"><a style="text-decoration: none" href="http://dev.mysql.com/doc/connector-net/en/connector-net-third-party-licenses.html" title="Previous Section">« B Licenses for Third-Party Components</a></div>
+		<hr size="1" noshade="noshade" align="center" width="40" style="margin: 0px auto 2px auto">		<a style="text-decoration: none" href="http://dev.mysql.com/doc/connector-net/en/license-us-secure-hash.html" title="Next Section">B.2 RFC 3174 - US Secure Hash Algorithm 1 (SHA1) License  »</a>	</div>
+	<div style="padding: 4px 0px 0px 4px; border: 2px dotted #ccc; border-right: none;">
+		<b>Section Navigation</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<small>[<a href="http://dev.mysql.com/doc/connector-net/en/license-antlr-3-3.html#" onclick="toggle(&#39;sectionnav&#39;);" onkeypress="if (event.keyCode == 13) { toggle(&#39;sectionnav&#39;); }">Toggle</a>]</small>
+			<ul id="sectionnav">
+				<li class="p"><a href="http://dev.mysql.com/doc/connector-net/en/connector-net-third-party-licenses.html">B Licenses for Third-Party Components</a></li><li class="self">B.1 ANTLR 3.3 License</li>
+<li><a href="http://dev.mysql.com/doc/connector-net/en/license-us-secure-hash.html">B.2 RFC 3174 - US Secure Hash Algorithm 1 (SHA1) License</a></li>
+<li><a href="http://dev.mysql.com/doc/connector-net/en/license-zlib.html">B.3 zlib License</a></li>
+<li><a href="http://dev.mysql.com/doc/connector-net/en/license-zlib-net.html">B.4 ZLIB.NET License</a></li>
+</ul>
+
+					
+	</div>
+
+</div>
+<!--/UdmComment-->
+
+<div class="section">
+<div class="titlepage"><div><div><h2 class="title">
+<a name="license-antlr-3-3"></a>B.1.&nbsp;ANTLR 3.3 License</h2></div></div></div>
+<pre class="programlisting">The following software may be included in this product:
+
+ANTLR 3.3
+
+ANTLR 3.3 License 
+Copyright (c) 2010 Terence Parr
+All rights reserved.
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions are met:
+
+Redistributions of source code must retain the above copyright notice, this
+list of conditions and the following disclaimer.
+Redistributions in binary form must reproduce the above copyright notice,
+this list of conditions and the following disclaimer in the documentation
+and/or other materials provided with the distribution.
+Neither the name of the author nor the names of its contributors may be used
+to endorse or promote products derived from this software without specific
+prior written permission.
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+POSSIBILITY OF SUCH DAMAGE.</pre>
+</div><div class="copyright-footer">
+    Copyright © 1997, 2012, Oracle and/or its affiliates. All
+    rights reserved.
+  <a href="http://dev.mysql.com/doc/connector-net/en/preface.html#legalnotice">Legal Notices</a>
+</div>
+<!--UdmComment--><div id="docnav"><a href="http://dev.mysql.com/doc/connector-net/en/license-antlr-3-3.html#">Top</a> / <a rel="prev" href="http://dev.mysql.com/doc/connector-net/en/connector-net-third-party-licenses.html" title="B Licenses for Third-Party Components">Previous</a> / <a rel="next" href="http://dev.mysql.com/doc/connector-net/en/license-us-secure-hash.html" title="B.2 RFC 3174 - US Secure Hash Algorithm 1 (SHA1) License">Next</a> / <a rel="up" href="http://dev.mysql.com/doc/connector-net/en/connector-net-third-party-licenses.html" title="B Licenses for Third-Party Components">Up</a> / <a rel="contents" href="http://dev.mysql.com/doc/connector-net/en/index.html">Table of Contents</a></div><!--/UdmComment--></div></div>
+
+
+
+
+
+</div> <!--End Container -->
+
+
+
+
+  
+ 
+<div id="footer">
+
+    <div class="links">
+        <ul>
+            <li class="top"><a href="http://dev.mysql.com/">Developer Zone</a></li>
+	    <li><a href="http://dev.mysql.com/doc/">Documentation</a></li>
+            <li><a href="http://dev.mysql.com/articles/">Developer Articles</a></li>
+			<li><a href="http://dev.mysql.com/news-and-events/">News &amp; Events</a></li>
+            <li><a href="http://forums.mysql.com/">Forums</a></li>
+            <li><a href="http://bugs.mysql.com/">Bugs</a></li>
+            <li><a href="http://dev.mysql.com/worklog/">Worklog</a></li>
+			            <li><a href="http://planet.mysql.com/">Planet MySQL</a></li>
+			            <li><a href="http://labs.mysql.com/">Labs</a></li>
+        </ul>
+    </div>
+
+    <div class="links">
+        <ul>
+            <li class="top"><a href="http://dev.mysql.com/downloads/">Downloads</a></li>
+            <li><a href="http://dev.mysql.com/downloads/mysql/">MySQL Community Server</a></li>
+            <li><a href="http://dev.mysql.com/downloads/mysql-proxy/">MySQL Proxy</a></li>
+            <li><a href="http://dev.mysql.com/downloads/cluster/">MySQL Cluster</a></li>
+            <li><a href="http://dev.mysql.com/downloads/workbench/">MySQL Workbench</a></li>
+            <li><a href="http://dev.mysql.com/downloads/connector/">MySQL Connectors</a></li>
+            <li><a href="http://downloads.mysql.com/archives.php">Archives</a></li>
+            <li><a href="http://dev.mysql.com/downloads/mirrors.html">Mirrors</a></li>
+        </ul>
+    </div>
+
+    <div class="links">
+        <ul>
+            <li class="top"><a href="http://dev.mysql.com/doc/">Documentation</a></li>
+            <li><a href="http://dev.mysql.com/doc/">MySQL Reference Manuals</a></li>
+            <li><a href="http://dev.mysql.com/doc/index-gui.html">MySQL Workbench</a></li>
+            <li><a href="http://dev.mysql.com/doc/index-expert.html">Expert Guides</a></li>
+            <li><a href="http://dev.mysql.com/doc/index-topic.html">Topic Guides</a></li>
+            <li><a href="http://dev.mysql.com/doc/index-cluster.html">MySQL Cluster</a></li>
+            <li><a href="http://dev.mysql.com/doc/index-other.html">Other Documents</a></li>
+            <li><a href="http://dev.mysql.com/doc/index-about.html">About</a></li>
+            <li><a href="http://dev.mysql.com/doc/index-archive.html">Archives</a></li>
+        </ul>
+    </div>
+
+    <div class="links">
+        <ul>
+            <li class="top"><a href="http://dev.mysql.com/support/">Support</a></li>
+            <li><a href="http://lists.mysql.com/">Lists</a></li>
+            <li><a href="http://forums.mysql.com/">Forums</a></li>
+		</ul>
+
+		<ul>
+            <li class="top">Other</li>
+            <li><a href="http://www.mysql.com/about/legal/">Legal</a></li>
+			<li><a href="http://www.mysql.com/about/contact/">Contact Us</a></li>
+            <li><a href="http://dev.mysql.com/sitemap.html">Site Map</a></li>
+        </ul>
+    </div>
+
+
+
+    <div id="search" class="en">
+	        <form id="footer_search" action="http://search.oracle.com/search/search" method="get">
+            <input type="text" id="f_q" name="q" value="" class="swap_value" onfocus="clearSearchText();">
+	    <input type="hidden" name="group" value="Documentation">
+	    <input type="image" src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/footer_search_g.png" id="f_go" alt="Search" title="Search">
+        </form>    </div>
+
+</div><!-- End Footer -->
+		<div id="copyright-oracle"><a href="http://www.oracle.com/"><img src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/logo-oracle-red-91x22.gif" alt="Oracle" width="91" height="22"></a>&nbsp;&nbsp;<span>© 2012, Oracle Corporation and/or its affiliates</span></div>
+
+
+<script src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/s_code_remote.js"></script><script type="text/javascript" src="./MySQL    MySQL Connector Net    B.1 ANTLR 3.3 License_files/metrics_group1.js"></script>
+
+
+</body></html>
